--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,6 @@
+2011-10-03 version 1.3.0
+    * Clojure 1.3.0
+    * def ^:dynamic
+
 2011-02-27 version 1.2.1
     * Fixed bug in signature padding
