--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-03-04 version 1.4.0
+    * Remove reflections (thanks naitik!)
+
 2011-10-03 version 1.3.0
     * Clojure 1.3.0
     * def ^:dynamic
