--- a/ChangeLog
+++ b/ChangeLog
@@ -1,26 +1,29 @@
+2016-08-18 version 1.4.6
+* Include standard function metadata on digest functions (@holguinj  in PR #6)
+
 2016-06-16 version 1.4.5
-    * Added licence to project.clj (@raxod502 in PR #4)
-    * Clojure 1.8.0
+* Added licence to project.clj (@raxod502 in PR #4)
+* Clojure 1.8.0
 
 2014-04-02 version 1.4.4
-    * Clojure 1.6
-    * README.rst -> README.md
+* Clojure 1.6
+* README.rst -> README.md
 
 2013-02-20 version 1.4.3
-    * Using protocols (thanks DerGuteMoritz)
+* Using protocols (thanks DerGuteMoritz)
 
 2012-11-24 version 1.4.2
-    * Clojure 1.4
+* Clojure 1.4
 
 2012-11-24 version 1.4.1
-    * Fix file descriptor leak (thanks Craig Ludington)
+* Fix file descriptor leak (thanks Craig Ludington)
 
 2012-03-04 version 1.4.0
-    * Remove reflections (thanks naitik!)
+* Remove reflections (thanks naitik!)
 
 2011-10-03 version 1.3.0
-    * Clojure 1.3.0
-    * def ^:dynamic
+* Clojure 1.3.0
+* def ^:dynamic
 
 2011-02-27 version 1.2.1
-    * Fixed bug in signature padding
+* Fixed bug in signature padding
