add @laurio to changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-2018-03-23 version 1.4.8
-* Minor fixes
+2018-03-25 version 1.4.8
+* Minor fixes (@laurio in PR #8)
 
 2018-03-18 version 1.4.7
 * Minor simplifications, fix typo.
