--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2018-03-25 version 1.4.10
-* Changes to test for public domain data (issue #11)
+* Test using for public domain data (issue #11)
 
 2018-03-25 version 1.4.8
 * Minor fixes (@laurio in PR #8)
